hphp/test/zend/good/Zend/tests/add_007.php
<?php

$a = array(1,2,3);

$s1 = "some string";

$c = $a + $s1;
var_dump($c);

echo "Done\n";
?>